--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     </header>
     <!--Intro... -->
     <p class="parrafo">
-        Hii 👋, I'm Zeme! While I'm passionate about the software world and specialized in Agile: Software Project
-      Management. With skills in Java, Cypress, Cucumber, JavaScript, HTML, and CSS. I
-      have strengthened our team's ability to design efficient and adaptive testing
+        Hii 👋, I'm Zeme! I'm passionate about the software world and specialize in Agile: Software Project
+      Management with skills in Java, Selenium, Cypress, Cucumber, JavaScript, HTML, and CSS. I
+      have strengthened my team's ability to design efficient and adaptive testing
       strategies.
-      Always seeking continuous improvement and innovation, I am motivated by
+      I am always seeking continuous improvement and innovation opportunities and i am motivated by
       challenges and the opportunity to grow into leadership roles in software quality
       and development.
       I am currently studying to obtain the ISTQB certification.
@@ -66,14 +66,14 @@
           <h3 class="">Junior Engineer QA at <a href="https://app.embat.io/login" target="_blank" class=""> Embat </a></h3>
         </header>
         <div>
-          <small>11/03/2024 - Present [Hibrid] <strong>📍Madrid, Spain</strong></small>
+          <small>11/03/2024 - Present [Hybrid] <strong>📍Madrid, Spain</strong></small>
           <p>I collaborated closely with development and product teams to analyze
             requirements(<strong>Jira, Confluence</strong>) and designs in early stages to identify potential risks and
             issues and I worked proactively to identify opportunities for test automation and
             contribute to the development of automated test scripts when appropriate
-            with different tools (<strong>Cypress, Cucumber</strong>).
-            Triaging external incidences related to platforms and executing any steps
-            required in order to resolve them to regress.</p>
+            with different tools (<strong>Selenium, <strong>Cypress, Cucumber</strong>).
+            I also classified external incidences related to platforms and executing any steps
+            required in order to resolve them.</p>
         </div>
         <footer>
           <!--infomarcion secundaria como añadir el tema de Copyright y se suele añadir un <small/> dentro  -->
@@ -81,11 +81,11 @@
       </article>
       <article class="vodafoneStrategic">
         <header>
-          <h3 class="">Specialist IT Strategic Programs at <a href="https://oferta.vodafone.es/vodafone-one/" target="_blank" class=""> Vodafone España S.L </a></h3>
+          <h3 class=""> IT Strategic Programs Specialist at <a href="https://oferta.vodafone.es/vodafone-one/" target="_blank" class=""> Vodafone España S.L </a></h3>
         </header>
         <div>
-          <small>10/05/2023 - 15/02/2024 [Hibrid]<strong>📍Vigo, Spaiin</strong></small>
-          <p>Design and develop  IT solution in terms of application software(<strong>Jira, Confluence</strong>), operating system and data warehouse.</p>
+          <small>10/05/2023 - 15/02/2024 [Hibrid]<strong>📍Vigo, Spain</strong></small>
+          <p>Design and develop IT solution in terms of application software(<strong>Jira, Confluence</strong>), operating system and data warehouses.</p>
         </div>
         <footer>
         </footer>
@@ -98,8 +98,8 @@
           <small>17/05/2022 - 10/05/2023 [Hibrid]<strong>📍Vigo, Spaiin</strong></small>
           <p>I worked in agile environment with different teams (Development, Product,
             Operations and Design) to assure the QA coverage.
-            Created and executed <strong>manual scenarios test cases</strong> including with attend
-            planning meetings, provide feedback on user stories and create acceptance
+            I also created and executed <strong>manual test cases</strong> and attended
+            planning meetings, provided feedback on user stories and created acceptance
             criteria.</p>
         </div>
         <footer>
