--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!--Título que va aparecer arribe de la pestaña-->
-      <title>Zeme Engieneer QA </title>
+      <title>Zeme QA </title>
 
       <!-- Descripción de nuestra página-->
       <meta name="Descripción" content="Portafolio de Zemedu que muestra con que estudios, cargos, experiencia laboral que ha obtenido a lo largo de su vida laboral o académica.">
@@ -24,14 +24,64 @@
 
       <!--Indicar cual es nuestra página principal para cuando redirija-->
       <link ref="canonical" href="http://zeme.es/es">
+
+      <!--Añadir la librería de banderas (incluye el cdn de flag-icon-css) -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
       
-      
+      <!--Estilo del portafolio CSS -->
       <link rel="stylesheet" type="text/css" href="style.css">
 
   </head>
 
   <body>
+    <!-- SELECTOR DE IDIOMAS (CLASS)-->
+     <div class="demo-content">
+        <h1>Selector de Idiomas para tu Portafolio</h1>
+        <p>Este es un ejemplo del selector de idiomas que puedes añadir a tu portafolio.</p>        
+        <!-- Selector de idiomas -->
+        <div class="language-selector">
+            <div class="language-button" id="languageButton">
+                <span class="flag flag-icon flag-icon-es"></span>
+                <span>Español</span>
+            </div>
+            <div class="language-dropdown" id="languageDropdown">
+                <div class="language-option" data-lang="es">
+                    <span class="flag flag-icon flag-icon-es"></span>
+                    <span>Español</span>
+                </div>
+                <div class="language-option" data-lang="en">
+                    <span class="flag flag-icon flag-icon-us"></span>
+                    <span>English</span>
+                </div>
+                <div class="language-option" data-lang="fr">
+                    <span class="flag flag-icon flag-icon-fr"></span>
+                    <span>Français</span>
+                </div>
+                <div class="language-option" data-lang="de">
+                    <span class="flag flag-icon flag-icon-de"></span>
+                    <span>Deutsch</span>
+                </div>
+                <div class="language-option" data-lang="pt">
+                    <span class="flag flag-icon flag-icon-br"></span>
+                    <span>Português</span>
+                </div>
+            </div>
+        </div>
+        <div class="instructions">
+            <h2>Instrucciones para integrar en tu portafolio:</h2>
+            <ol>
+                <li>Añade esta línea en el <code>&lt;head&gt;</code> de tu HTML para las banderas:
+                    <pre>&lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css"&gt;</pre>
+                </li>
+                <li>Copia el HTML del selector de idiomas donde quieras colocarlo (recomiendo en la esquina superior derecha)</li>
+                <li>Copia los estilos CSS en tu hoja de estilos</li>
+                <li>Copia el JavaScript al final de tu HTML antes de cerrar <code>&lt;/body&gt;</code></li>
+                <li>Para la funcionalidad real de traducción, necesitarías implementar una solución como i18next o similar</li>
+            </ol>
+        </div>
+    </div>
 
+     <!-- HEADER (CLASS)-->   
     <header class="cabecera">            
       <img  class="" width="150" height="150" alt="Foto de Zeme de titulo" title="Foto de Zeme" src="/image/foto_e.jpg">
       <h1 class="" > Zemedu Freiria</h1>
