intento de arreglo los iconos de redes sociales

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </nadvar>
 
   </header>
-
+  
   <section class="home">
 
     <div class="home-contenido" id="home">
@@ -102,10 +102,10 @@
       and development.</p>
       I am currently studying to obtain the ISTQB certification.
       </p>
+
       <!--Contacta por Redes Sociales -->
       <div class="social-media">
-        <!--El target es para sacar nueva pestaña
-            rel es para referencia sin mandar las referencias de datos    -->
+        <!--El target es para sacar nueva pestaña rel es para referencia sin mandar las referencias de datos    -->
         <a href="#" ><i class='bxl bx-gmail'></i> </a>
         <a href="https://github.com/edgarZemedu"><i class='bxl bx-github'></i> </a>
         <a href="https://www.linkedin.com/in/zemedu-freiria-cameselle-2627a9199/" > <i
