--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
       <h3 class=""> Hellow 👋, It's Me</h3>
       <h1 class=""> Zemedu Freiria Cameselle</h1>
       <h3> And I'm a QA Developer 🚀</h3>
-      </p>
-      I'm passionate about the software world and specialize in Agile: Software Project
+      <p>  I'm passionate about the software world and specialize in Agile: Software Project
       Management. I
       have strengthened my team's ability to design efficient and adaptive testing
       strategies.
       I am always seeking continuous improvement and innovation opportunities and i am motivated by
       challenges and the opportunity to grow into leadership roles in software quality
       and development.</p>
+      <p>
       I am currently studying to obtain the ISTQB certification.
       </p>
 
@@ -126,21 +126,19 @@
   <!-- SECCION  ABOUT-->
   <section class="about" id="about">
     <div class="about-imagen" id="about">
-      <img class="about-imagen" alt="Foto de Zeme para las secciones" title="Foto de Zeme" src="/image/foto_e.jpg">
+      <img alt="" src="/image/foto_e.jpg">
     </div>
     <div class="about-contenido">
-      <h2 class="heading">👨‍💻 About <span> Me </span></h2>
-      <p> I am a proactive and responsible person, with a strong commitment to my work. I enjoy working in
-        teams and collaborating to achieve common goals. I am always willing to learn and improve my skills to
-        contribute effectively to the success of the projects I am involved in.</p>
+      <h2>👨‍💻 About <span> Me </span></h2>
+      <h3> QA Tester </h3>
       <p> I have experience in Agile methodologies, which has allowed me to develop skills in project management,
         teamwork, and adaptability to change. I am passionate about technology and constantly seek to stay updated
         on the latest trends and advancements in the field.</p>
       <p> In addition to my technical skills, I have strong communication skills that allow me to effectively convey
-        ideas and collaborate with colleagues and clients. I am confident that my combination of technical skills,
-        commitment, and passion for technology makes me a valuable asset for any organization.</p>
-
-
+        ideas and collaborate with colleagues and clients.</p>
+      <a href="#" class="btn">Read More</a>
+    </div>
+  </section>
 
   <!--Pie de página -->
   <div class="pie">
