--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
         <a href="/CV-7_2025 in.pdf" download="CV_Zemedu_Freiria_Cameselle.pdf" class="btn-cv">Download CV</a>
       </div>
     </div>
-
     <div class="home-imagen" id="about">
       <img class="home-imagen" alt="Foto de Zeme de titulo" title="Foto de Zeme" src="/image/foto_e.jpg">
     </div>
@@ -137,6 +136,34 @@
       <p> In addition to my technical skills, I have strong communication skills that allow me to effectively convey
         ideas and collaborate with colleagues and clients.</p>
       <a href="#" class="btn">Read More</a>
+    </div>
+  </section>
+
+  <!-- SECCION  SERVICIOS-->
+  <section class="servicios">
+    <h2>My <span>Services</span></h2>
+    <div class="servicios-contenido">
+      <div class="servicio-box">
+        <i class='bx  bx-test-tube'></i> 
+        <h3>Web Testing</h3>
+        <p> Specialize in identifying and reporting software defects to ensure the delivery of high-quality
+          products.</p>
+          <a href="#" class="btn">Read More</a>
+      </div>
+      <div class="servicio-box">
+        <i class='bx bx-cog' ></i>  
+        <h3>Mantenance</h3>
+        <p> Specialize in identifying and reporting software defects to ensure the delivery of high-quality
+          products.</p>
+          <a href="#" class="btn">Read More</a>
+      </div>
+      <div class="servicio-box">
+        <i class='bx  bx-lock-open-alt'></i> 
+        <h3>Security</h3>
+        <p> Specialize in identifying and reporting software defects to ensure the delivery of high-quality
+          products.</p>
+          <a href="#" class="btn">Read More</a>
+      </div>
     </div>
   </section>
 
